<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="dark_themes">Темная тема</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="email_support" translatable="false">novinnik@yandex.ru</string>
    <string name="theme_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="uri_yandex_practicum" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="uri_android_developer" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="clear_string_search">Очистить поисковый запрос</string>
    <string name="track_unification" translatable="false">%1 • %2</string>
    <string name="no_connection">Проблемы со связью. \n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="your_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="player_image_album_description">Описание постера альбома</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="Album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="player_btn_play_description">Воспроизведение/Пауза</string>
    <string name="player_btn_add_description">Добавить в плейлист</string>
    <string name="player_btn_like_description">Добавить в избранное</string>
    <string name="time_zero" translatable="false">00:00</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlist">Вы не создали \nни одного плейлиста</string>
    <string name="no_media">Ваша медиатека пуста</string>
    <string name="playlist">Плейлист</string>
    <string name="playlists">Плейлисты</string>
    <string name="select_tracks">Избранные треки</string>
    <string name="no_select_image">Изображение не выбрано</string>
    <string name="one_track">трек</string>
    <string name="two_four_track">трека</string>
    <string name="zero_many_track">треков</string>
    <string name="new_name_playlist">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="name_playlist">Название плейлиста</string>
    <string name="count_tracks">Количество треков</string>
    <string name="question_finisch_creating_a_playlist">Завершить создание плейлиста?</string>
    <string name="message_no_save_data">Все несохраненные данные будут потеряны</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_complete">Завершить</string>
    <string name="ok_create_small">успешно создан</string>
    <string name="share">Поделиться</string>
    <string name="menu">Меню</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="string_no">Нет</string>
    <string name="string_yes">Да</string>
    <string name="question_delete_track">Хотите удалить трек</string>
    <string name="question_delete_playlist">Хотите удалить плейлист</string>
    <string name="one_minute">минута</string>
    <string name="two_minutes">минуты</string>
    <string name="zero_many_minutes">минут</string>
    <string name="no_tracks_in_playlist_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="error_no_connection">Отсутствует подключение к сети интернет</string>
    <string name="message_notification_permission">Приложению требуются дополнительные разрешения для показа уведомлений</string>
</resources>