<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_forms"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="@dimen/header_padding_start"
            android:paddingEnd="@dimen/header_padding_end"
            android:paddingBottom="@dimen/setting_padding_bottom"
            android:paddingTop="@dimen/header_padding_top"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_text_size"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/menu_text_size"
            app:cornerRadius="@dimen/btn_corner_radius"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/menu_icon_padding"
            app:iconTint="@color/yp_black" />

        <Button
            android:id="@+id/button_media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textAllCaps="false"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/menu_text_size"
            app:cornerRadius="@dimen/btn_corner_radius"
            app:icon="@drawable/ic_media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/menu_icon_padding"
            app:iconTint="@color/yp_black" />

        <Button
            android:id="@+id/button_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/white"
            android:text="@string/setting"
            android:textAllCaps="false"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/menu_text_size"
            app:cornerRadius="@dimen/btn_corner_radius"
            app:icon="@drawable/ic_setting"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/menu_icon_padding"
            app:iconTint="@color/yp_black" />

</LinearLayout>


</LinearLayout>